--- a/formularz.html
+++ b/formularz.html
@@ -6,7 +6,17 @@
 </head>
 <body>
 	<form action="formularz.html" method="post">
-	
+		<p>Imię
+		<input type="text" name="imie" />
+		</p>
+		<p>Nazwisko
+		<input type="text" name="nazwisko" />
+		</p>
+		<p>Adres
+		<input type="text" name="adres" />
+		</p>
+		
+		
 	</form>
 </body>
 </html>
