--- a/formularz.html
+++ b/formularz.html
@@ -5,18 +5,34 @@
 	<title>Formularz</title>
 </head>
 <body>
-	<form action="formularz.html" method="post">
+	<form action="form.html" method="post">
 		<p>Imię
-		<input type="text" name="imie" />
+			<input type="text" name="imie" />
 		</p>
 		<p>Nazwisko
-		<input type="text" name="nazwisko" />
+			<input type="text" name="nazwisko" />
 		</p>
 		<p>Adres
-		<input type="text" name="adres" />
+			<input type="text" name="adres" />
 		</p>
 		
-		
+		<select name="produkty" multiple="multiple" size="6">
+			<optgroup label="Grupa 1">
+				<option value="1" selected="selected">Produkt1</option>
+				<option value="2" selected="selected">Produkt2</option>
+			</optgroup>
+			<optgroup label="Grupa 2">
+				<option value="1" selected="selected">Produkt1</option>
+				<option value="2" selected="selected">Produkt2</option>
+			</optgroup>
+		</select>
+		<p>Data Wysyłki
+			<input name="data" type="week" />
+		</p>
+		<p>Wybierz kolor
+			<input name="color" type="color" />
+		</p>
+		<input value="submit" type="submit" />
 	</form>
 </body>
 </html>
